# uspto_pfw_mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  .prompt_injections.baseline  .secrets.baseline  API_KEY_GUIDE.md  CUSTOMIZATION.md  Dockerfile  INSTALL.md  LICENSE  PROMPTS.md  README.md  SECURITY_GUIDELINES.md  SECURITY_SCANNING.md  SSO_SETUP.md  USAGE_EXAMPLES.md  field_configs.yaml  launcher.py  pyproject.toml
.github/workflows/: secret-scan.yaml
.security/: check_env_file_perms.py  check_prompt_injections.py  patent_prompt_injection_detector.py  prompt_injection_detector.py
deploy/: Validation-Helpers.psm1  linux_setup.sh  manage_api_keys.ps1  validation-helpers.sh  validation_helpers.sh  windows_setup.ps1
docs/: CONTENT_PROVENANCE.md
reference/: Document_Descriptions_List.csv  Office Action Rejections.txt  Office Action Text Retrieval.txt  PatentFileWrapper_swagger.yaml  README.md
scripts/: manage_mcp_users.py
scripts/manual_checks/: test_field_mapping_diagnostic.py  test_include_fields.py  test_mcp_server.py
src/patent_filewrapper_mcp/: __init__.py  __main__.py  app_uris.py  client_registry.py  exceptions.py  guidance.py  main.py  middleware.py  secure_storage.py  server_bootstrap.py  shared_secure_storage.py
src/patent_filewrapper_mcp/api/: __init__.py  docling_client.py  enhanced_client.py  field_constants.py  helpers.py  oa_base.py  oa_rejections_client.py  oa_text_client.py  resilience.py  transport.py  xml_parsing.py
src/patent_filewrapper_mcp/auth/: __init__.py  pages.py  provider.py  settings.py  store.py
tests/: README.md  TEST_SUITE.md  conftest.py  simple_test.py  test_auth_provider.py  test_document_codes_section.py  test_download.py  test_download_url_validation.py  test_enhanced_filename.py  test_field_mapping_diagnostic.py  test_fields_fix.py  test_fpd_integration.py  test_granted_patent_documents_download.py  test_identifier_logic.py  test_injection_scan.py  test_linux_secret_store.py  test_logging_hardening.py  test_mcp_server.py  test_medium_security_fixes.py  test_mistral_key_logic.py  test_ocr_hybrid_tiers.py  test_optional_mistral.py  test_placeholder_detection.py  test_proxy_routes.py  test_proxy_simple.py  test_proxy_token.py  test_ptab_integration.py  test_ptab_simple.py  test_quality_detection.py  test_resilience_features.py  test_safe_filename.py  test_shared_rate_limiter.py  test_tool_reflections.py  test_unified_key_management.py  test_user_management_gate.py  test_utils.py
(+65 files in other folders)
